#12 top and z-index fixed

--- a/src/NavTop.css
+++ b/src/NavTop.css
@@ -17,6 +17,7 @@
 
 .topnavall {
     padding-top: 2%;
+    margin-bottom: 10%;
 }
 
 .rightnav {
