--- a/src/css/Pluses.css
+++ b/src/css/Pluses.css
@@ -30,7 +30,6 @@
 .PlusDivGrid:hover {
     width: 106%;
     height: 100%;
-    z-index: 100;
     margin-left: -10px;
 }
 
